--- a/static/style.css
+++ b/static/style.css
@@ -1,50 +1,84 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
-
+.container {
+  display: flex;
+  justify-content: center;
+}
 .posts {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    margin: 50px 0;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 50px 10px;
+  align-items: center;
 }
 .post {
-    width: 600px;
-    box-shadow: 0 0 1px 1px #bdbdbd;
+  width: 600px;
+  box-shadow: 0 0 1px 1px #bdbdbd;
+  margin: 10px 0;
 }
 
 .post-img {
-    width: 600px;
+  width: 600px;
 }
 
-.post_info{
-    padding: 10px;
+.post_info {
+  padding: 10px;
 }
 
 .post_info > p {
-    padding: 5px 0;
+  padding: 5px 0;
 }
 
 .date {
-    color: #737373;
-    font-size: 12px;
+  color: #737373;
+  font-size: 12px;
 }
 
-.comments{
-    margin: 10px;
+.comments {
+  margin: 10px;
 }
 .comment {
-    border-bottom: 1px solid;
-    color: #fff;
-    background-color: royalblue;
+  border-bottom: 1px solid;
+  color: #fff;
+  background-color: royalblue;
 }
 
+.suggestions {
+  margin: 60px 10px;
+}
+
+.suggestions > .user {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 200px;
+  margin: 30px 0;
+}
+.suggestions > .user > div:first-child img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin: 0 10px;
+}
+
+.user-s-info {
+    display: flex;
+}
+
+.user-s-info span {
+    font-size: 12px;
+    color: #bbb;
+}
+
+.f-l {
+    color: royalblue;
+}
