--- a/static/post.css
+++ b/static/post.css
@@ -56,18 +56,85 @@ a {
   cursor: pointer;
 }
 
-
 .add-comment > p {
-    font-size: 18px;
-    margin: 10px 0;
+  font-size: 18px;
+  margin: 10px 0;
 }
 
 .add-comment > form textarea {
-    outline: none;
-    padding: 5px;
+  outline: none;
+  padding: 5px;
+}
+
+.add-reply {
+  display: none;
+}
+
+.comment-form {
+  padding: 10px;
+  height: 0px;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.comment-form textarea {
+  width: 100%;
+  height: 38px;
+  outline: none;
+  border: 1px solid #ccc;
+  display: none;
+}
+
+.comment-form > form > button {
+  width: 100px;
+  height: 30px;
+  background: #ac7a46;
+  background: -moz-linear-gradient(
+    45deg,
+    #f09433 0%,
+    #e6683c 25%,
+    #dc2743 50%,
+    #cc2366 75%,
+    #bc1888 100%
+  );
+  background: -webkit-linear-gradient(
+    45deg,
+    #f09433 0%,
+    #e6683c 25%,
+    #dc2743 50%,
+    #cc2366 75%,
+    #bc1888 100%
+  );
+  background: linear-gradient(
+    45deg,
+    #f09433 0%,
+    #e6683c 25%,
+    #dc2743 50%,
+    #cc2366 75%,
+    #bc1888 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+  color: #fff;
+  border-radius: 7px;
+  border: none;
+  margin: 10px 0;
+  cursor: pointer;
+}
+
+.active form textarea {
+  display: block;
 }
 
 
-.add-reply {
-    display: none;
+.show-comment-form {
+  background-color: #1976d2;
+  border: none;
+  border-radius: 5px;
+  width: 60px;
+  height: 25px;
+  outline: none;
+  cursor: pointer;
+  color: #fff;
 }
