--- a/static/profile.css
+++ b/static/profile.css
@@ -12,7 +12,7 @@ a {
 .profile {
   display: flex;
   justify-content: space-between;
-  margin: 50px auto;
+  margin: 100px auto;
   width: 630px;
 }
 
@@ -75,15 +75,15 @@ a {
 }
 
 .user-info > div:first-child > div {
-  margin: 0 20px;
+  margin: 0 10px;
 }
 
 .user-info > div:first-child > h2 {
-  margin: 0 20px;
+  margin: 0 10px 0 20px;
   color: rgb(158, 158, 158);
 }
 
-.edit-profile {
+.profile-tool {
   width: 70px;
   height: 30px;
   border-radius: 5px;
