--- a/static/style.css
+++ b/static/style.css
@@ -12,12 +12,13 @@ a {
 .container {
   display: flex;
   justify-content: center;
+  margin-top: 50px;
 }
 .posts {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin: 50px 10px;
+  margin: 11px 10px;
   align-items: center;
 }
 .post {
@@ -53,7 +54,24 @@ a {
 }
 
 .suggestions {
-  margin: 60px 10px;
+  width: 0%;
+  height: 0%;
+  position: fixed;
+  background: #fff;
+  z-index: 10;
+  overflow: hidden;
+}
+
+.sidebar > div:first-child {
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  color: #797979;
+  cursor: pointer;
+}
+
+.sidebar > div:first-child img {
+  width: 30px;
 }
 
 .suggestions > .user {
@@ -63,7 +81,7 @@ a {
   width: 200px;
   margin: 30px 0;
 }
-.suggestions > .user > div:first-child img {
+.suggestions > .user > a > div:first-child img {
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -71,14 +89,131 @@ a {
 }
 
 .user-s-info {
-    display: flex;
+  display: flex;
 }
 
 .user-s-info span {
-    font-size: 12px;
-    color: #bbb;
+  font-size: 12px;
+  color: #bbb;
 }
 
 .f-l {
-    color: royalblue;
+  color: royalblue;
+}
+
+.comments > a {
+  color: #737373;
+}
+
+.comments > p {
+  color: #737373;
+}
+
+.add {
+  display: flex;
+  z-index: 1;
+  position: relative;
+}
+
+.add > div {
+  text-align: center;
+}
+
+.add > div img {
+  width: 30px;
+}
+
+.add-comment {
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.comment-form {
+  padding: 10px;
+  height: 0px;
+  overflow: hidden;
+}
+
+.comment-form textarea {
+  width: 100%;
+  height: 38px;
+  outline: none;
+  border: 1px solid #ccc;
+  display: none;
+}
+
+.comment-form > form {
+  background: #ffffffc4;
+}
+.comment-form > form > button {
+  width: 100px;
+  height: 30px;
+  background: #ac7a46;
+  background: -moz-linear-gradient(
+    45deg,
+    #f09433 0%,
+    #e6683c 25%,
+    #dc2743 50%,
+    #cc2366 75%,
+    #bc1888 100%
+  );
+  background: -webkit-linear-gradient(
+    45deg,
+    #f09433 0%,
+    #e6683c 25%,
+    #dc2743 50%,
+    #cc2366 75%,
+    #bc1888 100%
+  );
+  background: linear-gradient(
+    45deg,
+    #f09433 0%,
+    #e6683c 25%,
+    #dc2743 50%,
+    #cc2366 75%,
+    #bc1888 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+  color: #fff;
+  border-radius: 7px;
+  border: none;
+  margin: 10px 0;
+  cursor: pointer;
+}
+
+.active form textarea {
+  display: block;
+}
+
+.alert {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+/* responsive !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+@media only screen and (max-width: 650px) {
+  .container {
+    flex-direction: column-reverse;
+  }
+  .posts {
+    margin: 50px 0px;
+  }
+  .post {
+    width: 100%;
+    margin: 0;
+  }
+  .post-img {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .container {
+    flex-direction: column-reverse;
+  }
+
+  .sidebar {
+    margin-top: 50px;
+  }
 }
