--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -1,26 +1,89 @@
-<nav>
-    <div class="logo">
-        <a href="/">instagram</a>
-    </div>
-    <div>
-        <input type="search" name="search" id="search" placeholder="search username...">
-    </div>
-    <div>
-        <a href="/">
-            <img src="https://img.icons8.com/material-rounded/24/000000/home.png" />
-        </a>
+{% load static %}
+<div id="menu-screen">
+    <div class="user-menu">
         {% if request.user.is_authenticated %}
-        <a href="{% url 'post:add_post' %}" >
+        <a href="{% url 'post:add_post' %}">
             <img class="add-post"
                 src="https://img.icons8.com/external-becris-lineal-becris/64/000000/external-add-mintab-for-ios-becris-lineal-becris.png" />
+            <p>Add post</p>
         </a>
         <a href="{% url 'users:profile' pk=request.user.pk username=request.user.username %}">
-            <img class="nav-avatar" src="{{request.user.profile.image.url}}" alt="">
+            {% if ok %}
+            <img class="nav-avatar" src="{{request.user.profile.imageUrl}}" alt="">
+            {% else %}
+            <img class="nav-avatar" src="https://img.icons8.com/ios/50/000000/user--v1.png" alt="">
+            {% endif %}
+            <p>Profile</p>
+        </a>
+        <a href="{% url 'users:logout' %}">
+            <img class="logout" src="https://img.icons8.com/ios/50/000000/export.png" />
+            <p>LOG OUT</p>
         </a>
         {% else %}
         <a href="{% url 'users:login' %}">login</a>
         <a href="{% url 'users:signup'  %}">signup</a>
         {% endif %}
-
+    </div>
+</div>
+<nav>
+    <div class="logo">
+        <a href="/">instagram</a>
+    </div>
+    <div class="menu" onclick="myFunction(this)">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+    </div>
+    <div class="search">
+        <form action="" method="get">
+            <input type="search" name="search" id="search" placeholder="search.." autocomplete="off">
+            <button type="submit">
+                <img src="https://img.icons8.com/ios-glyphs/30/000000/search--v1.png" />
+            </button>
+        </form>
+        <div id="search-result">
+        </div>
+    </div>
+    <div class="user-t">
+        <a href="/">
+            <img src="https://img.icons8.com/material-rounded/24/000000/home.png" />
+        </a>
+        {% if request.user.is_authenticated %}
+        <a href="{% url 'post:add_post' %}">
+            <img class="add-post"
+                src="https://img.icons8.com/external-becris-lineal-becris/64/000000/external-add-mintab-for-ios-becris-lineal-becris.png" />
+        </a>
+        <a href="{% url 'users:profile' pk=request.user.pk username=request.user.username %}">
+            {% if ok %}
+            <img class="nav-avatar" src="{{request.user.profile.imageUrl}}" alt="">
+            {% else %}
+            <img class="nav-avatar" src="https://img.icons8.com/ios/50/000000/user--v1.png" alt="">
+            {% endif %}
+        </a>
+        {% else %}
+        <a href="{% url 'users:login' %}">login</a>
+        <a href="{% url 'users:signup'  %}">signup</a>
+        {% endif %}
     </div>
 </nav>
+
+
+
+{% block js %}
+<script src="{% static 'js/s.js' %}"></script>
+{% endblock js %}
+
+<script>
+    var openMenu = false
+    var menu = document.getElementById('menu-screen')
+    function myFunction(x) {
+        if (openMenu === false) {
+            openMenu = true
+            menu.style.width = '100px'
+        } else if (openMenu === true) {
+            openMenu = false
+            menu.style.width = '0px'
+        }
+        x.classList.toggle("change");
+    }
+</script>
