--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,13 @@
 {% include 'inc/navbar.html' %}
 <div class="container">
     <div class="content">
+
+        {% if alert != None %}
+        <div class="alert">
+            {{alert}}
+        </div>
+        {% endif %}
+
         <div class="posts">
             {% for p in posts %}
             <div class="post">
@@ -18,6 +25,30 @@
                     <img class="post-img" src="{{p.image.url}}" alt="">
                 </a>
                 <div class="post_info">
+                    <div class="add">
+                        <div class="like">
+                            <a href="{% url 'post:like_unlike' post_id=p.pk %}">
+                                {% if request.user in p.likes.all %}
+                                <img class="like-btn" src="https://img.icons8.com/ios-filled/50/fa314a/like--v1.png" />
+                                {% else %}
+                                <img class="like-btn"
+                                    src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/64/000000/external-heart-miscellaneous-kiranshastry-lineal-kiranshastry.png" />
+                                {% endif %}
+                            </a>
+                            <p>{{p.likes.count}} like</p>
+                        </div>
+                        <div class="add-comment show-comment-form">
+                            <img src="https://img.icons8.com/fluency-systems-regular/48/000000/comments--v2.png" />
+                            <p>{{p.post_comments.count}} comments</p>
+                        </div>
+                        <div class="comment-form">
+                            <form action="{% url 'comment:add' post_id=p.pk %}" method="post">
+                                {% csrf_token %}
+                                {{form.as_p}}
+                                <button type="submit">Add</button>
+                            </form>
+                        </div>
+                    </div>
                     <p>{{p.descriptions}}</p>
                     <a href="{% url 'users:profile' pk=p.user.pk username=p.user.username %}">
                         <p>{{p.user}} </p>
@@ -25,34 +56,48 @@
                     <p class="date">{{p.create | date}}</p>
                 </div>
 
+                <div class="comments">
+                    {% if p.post_comments.count == 1 %}
+                    <a href="{{p.get_absolut_url}}">View {{p.post_comments.count}} comments</a>
+                    {% elif p.post_comments.count > 1%}
+                    <a href="{{p.get_absolut_url}}">View all {{p.post_comments.count}} comments</a>
+                    {% else %}
+                    <p>there is no comment</p>
+                    {% endif %}
+                </div>
             </div>
             {% endfor %}
         </div>
     </div>
     <div class="sidebar">
+        <div id="s-btn">
+            <span>Suggested for you</span> <img src="https://img.icons8.com/ios-filled/50/000000/expand-arrow.png" />
+        </div>
         <div class="suggestions">
             {% for user in users %}
             <div class="user">
-                <div class="user-s-info">
+                <a href="{% url 'users:profile' pk=user.pk username=user.username %}">
+                    <div class="user-s-info">
+                        <div>
+                            {% if user.profile == '' %}
+                            <img src="https://img.icons8.com/ios/50/000000/user--v1.png" alt="">
+                            {% else %}
+                            <img src="{{user.profile.imageUrl}}" alt="">
+                            {% endif %}
+                        </div>
+                        <div>
+                            <h4>{{user.username}}</h4>
+                            <span>Suggested for you</span>
+                        </div>
+                    </div>
                     <div>
-                        {% if user.profile == '' %}
-                        <img src="https://img.icons8.com/ios/50/000000/user--v1.png" alt="">
+                        {% if request.user in user.relation.follower.all %}
+                        <a class="f-l" href="{% url 'users:follow_unfollow' user_id=user.id %}">unfollow</a>
                         {% else %}
-                        <img src="{{user.profile.imageUrl}}" alt="">
+                        <a class="f-l" href="{% url 'users:follow_unfollow' user_id=user.id %}">follow</a>
                         {% endif %}
                     </div>
-                    <div>
-                        <h4>{{user.username}}</h4>
-                        <span>Suggested for you</span>
-                    </div>
-                </div>
-                <div>
-                    {% if request.user in user.relation.follower.all %}
-                    <a class="f-l" href="{% url 'users:follow_unfollow' user_id=user.id %}">unfollow</a>
-                    {% else %}
-                    <a class="f-l" href="{% url 'users:follow_unfollow' user_id=user.id %}">follow</a>
-                    {% endif %}
-                </div>
+                </a>
             </div>
             {% endfor %}
         </div>
@@ -60,3 +105,8 @@
 </div>
 
 {% endblock content %}
+
+{% block js %}
+<script src="{% static 'js/commentForm.js' %}"></script>
+<script src="{% static 'js/script.js' %}"></script>
+{% endblock js %}
